[WIP] overview template

--- a/Resources/Private/Templates/Overview.html
+++ b/Resources/Private/Templates/Overview.html
@@ -1,13 +1,37 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
 	  xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
 	  data-namespace-typo3-fluid="true">
-<h1>Digital Asset Management</h1>
 
-<p>Here are your files.</p>
-
-<f:debug title="Overview Template">{_all}</f:debug>
-<div>
-
-
+<div class="page-header bg-dark text-white">
+	<h1>Digital Asset Management <small>Here are your files.</small></h1>
+</div>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-xs-12 col-md-2">
+			<div class="navbar">
+				Suche
+			</div>
+			<div>
+				<ul>
+					<li>Dateien</li>
+					<li>Favoriten</li>
+					<li>Zuletzt verwendet</li>
+				</ul>
+			</div>
+		</div>
+		<div class="col-xs-12 col-md-10">
+			<div class="header">
+				<h1>Dateien</h1>
+				<div class="card" style="width: 18rem;">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title</h5>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 </html>
