--- a/Resources/Public/Css/digitalassetmanagement.css
+++ b/Resources/Public/Css/digitalassetmanagement.css
@@ -1,6 +1,6 @@
 div {
-	background-color: lightgrey;
-	border: 1px solid red;
+	/*background-color: lightgrey;*/
+	/*border: 1px solid red;*/
 }
 
 /* reset TYPO3 default styles */
