--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -5,7 +5,7 @@
 <div class="page-header bg-dark text-white">
 	<h1>Digital Asset Management <small>Here are your files.</small></h1>
 </div>
-<div class="container-fluid">
+<div class="container-fluid digital-asset-management">
 	<div class="row">
 		<div class="col-xs-12 col-md-2">
 			<div class="navbar">
