[FEATURE] Trigger refresh index action

--- a/Resources/Private/Templates/Index.html
+++ b/Resources/Private/Templates/Index.html
@@ -53,7 +53,9 @@
 							</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled" href="#">Disabled</a>
+							<div class="folder-action nav-link disabled" data-method="reindexStorage" data-parameter="">
+								<f:image src="/typo3/sysext/core/Resources/Public/Icons/T3Icons/actions/actions-refresh.svg"/>
+							</div>
 						</li>
 					</ul>
 					<form class="form-inline my-2 my-lg-0">
